Not sure what the last one did, but trying again

--- a/papers/feick2021illusions/index.html
+++ b/papers/feick2021illusions/index.html
@@ -113,7 +113,7 @@
 &nbsp;&nbsp;author = {Feick, Martin and Kleer, Niko and Zenner, Andr\'e and Tang, Anthony and Kr\"uger, Antonio},<br />
 &nbsp;&nbsp;booktitle = {CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems},<br />
 &nbsp;&nbsp;title = {Visuo-haptic Illusions for Linear Translation and Stretching using Physical Proxies in Virtual Reality},<br />
-&nbsp;&nbsp;type = {paper},<br />
+&nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {26.3% - 749/2844},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.pdf},<br />
