--- a/papers/feick2022illusions/index.html
+++ b/papers/feick2022illusions/index.html
@@ -97,11 +97,13 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
+	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2022-chi2022-feick-illusions.pdf)</a><br/>
 
 
+	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions-talk.mp4"><i class="fa fa-sticky-note-o"></i> URL (http://hcitang.org/papers/2022-chi2022-feick-illusions-talk.mp4)</a><br/>
 
-	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
+
+	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4)</a><br/>
 
 
 </p>
@@ -116,8 +118,9 @@
 &nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2022},<br />
 &nbsp;&nbsp;acceptance = {24.7% - 638/2579},<br />
-&nbsp;&nbsp;pdfurl = {},<br />
-&nbsp;&nbsp;videourl = {}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2022-chi2022-feick-illusions.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4},<br />
+&nbsp;&nbsp;url = {http://hcitang.org/papers/2022-chi2022-feick-illusions-talk.mp4}<br />
 }<br />
 </p>
 					</div>
