--- a/papers/james2022flavorslbw/index.html
+++ b/papers/james2022flavorslbw/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</title>
+		<title>Watch Your Flavors: Augmenting People’s Flavor Perceptions and Associated Emotions based on Videos Watched while Eating</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</h1>
+						<h1 style="margin: 0 0 0.5em 0">Watch Your Flavors: Augmenting People’s Flavor Perceptions and Associated Emotions based on Videos Watched while Eating</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
+<span id="james2022flavorslbw">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline">Watch Your Flavors: Augmenting People’s Flavor Perceptions and Associated Emotions based on Videos Watched while Eating</span>. In <i>EA CHI ’22: Extended Abstracts of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 
+
+	<small>Acceptance: 36.1% (261/722).</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Wilderness search and rescue (WSAR) is a command-and-control activity, where a Command team manages field teams scattered across a large area looking for a lost person. The challenge is that it can be difficult for Command to maintain awareness of field teams and the conditions of the field. We designed RescueCASTR, an interface that explores the idea of deploying field teams with wearable cameras that stream live video or sequential photos periodically to Command that aid contextual awareness. We ran a remote user study with WSAR managers to get an understanding of the opportunities and challenges of such a system. We found that the awareness provided by the camera footage could give additional confidence and comfort to Command, as well as reduce the need for explicit communications. However, it could also impact workers’ traditional roles and responsibilities, shifting the burden of responsibility toward Command. We conclude that, while wearable-camera footage could be beneficial to Command, they need to have the tools and means to narrow their focus within the abundance of information provided. Furthermore, camera streams should not be thought of as a replacement for more direct communications, but rather as another tool available to help Command supplement their understanding of events in the field and help them narrow their focus.</p>
+<p style="margin: 0.5em 0 1em 0">People engage in different activities while eating alone, such as watching television or scrolling through social media on their phones. However, the impacts of these visual contents on human cognitive processes, particularly related to flavor perception and its attributes, are still not thoroughly explored. This paper presents a user study to evaluate the influence of six different types of video content (including nature, cooking, and a new food video genre known as mukbang) on people’s flavor perceptions in terms of taste sensations, liking, and emotions while eating plain white rice. Our findings revealed that the participants’ flavor perceptions are augmented based on different video content, indicating significant differences in their perceived taste sensations (e.g., increased perception of salty and spicy sensations). Furthermore, potential future implications are revealed to promote digital commensality and healthier eating habits.</p>
 
 <!--
 
@@ -95,30 +97,30 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-james-flavors.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2022-chi2022lbw-james-flavors.pdf)</a><br/>
 
 
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-james-flavors-poster.pdf"><i class="fa fa-sticky-note-o"></i> URL (http://hcitang.org/papers/2022-chi2022lbw-james-flavors-poster.pdf)</a><br/>
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4)</a><br/>
 
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-james-flavors.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2022-chi2022lbw-james-flavors.mp4)</a><br/>
 
-	<a href="https://dl.acm.org/doi/10.1145/3512960"><i class="fa fa-external-link"></i> DOI (https://dl.acm.org/doi/10.1145/3512960)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{jones2022rescuecastr,<br />
-&nbsp;&nbsp;author = {Jones, Brennan and Tang, Anthony and Neustaedter, Carman},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post},<br />
-&nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {2, CSCW},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{james2022flavorslbw,<br />
+&nbsp;&nbsp;author = {James, Meetha Nesam and Ranasinghe, Nimesha and Tang, Anthony and Oehlberg, Lora},<br />
+&nbsp;&nbsp;booktitle = {EA CHI '22: Extended Abstracts of the 2022 SIGCHI Conference on Human Factors in Computing Systems},<br />
+&nbsp;&nbsp;title = {Watch Your Flavors: Augmenting People's Flavor Perceptions and Associated Emotions based on Videos Watched while Eating},<br />
+&nbsp;&nbsp;type = {poster},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2022-chi2022lbw-james-flavors.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2022-chi2022lbw-james-flavors.mp4},<br />
+&nbsp;&nbsp;url = {http://hcitang.org/papers/2022-chi2022lbw-james-flavors-poster.pdf},<br />
 &nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;doi = {https://dl.acm.org/doi/10.1145/3512960},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4}<br />
+&nbsp;&nbsp;acceptance = {36.1% (261/722)}<br />
 }<br />
 </p>
 					</div>
