--- a/papers/kumar2022tourgetherlbw/index.html
+++ b/papers/kumar2022tourgetherlbw/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</title>
+		<title>Tourgether360: Exploring 360° Tour Videos with Others</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</h1>
+						<h1 style="margin: 0 0 0.5em 0">Tourgether360: Exploring 360° Tour Videos with Others</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
+<span id="kumar2022tourgetherlbw">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline">Tourgether360: Exploring 360° Tour Videos with Others</span>. In <i>EA CHI ’22: Extended Abstracts of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 
+
+	<small>Acceptance: 36.1% (261/722).</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Wilderness search and rescue (WSAR) is a command-and-control activity, where a Command team manages field teams scattered across a large area looking for a lost person. The challenge is that it can be difficult for Command to maintain awareness of field teams and the conditions of the field. We designed RescueCASTR, an interface that explores the idea of deploying field teams with wearable cameras that stream live video or sequential photos periodically to Command that aid contextual awareness. We ran a remote user study with WSAR managers to get an understanding of the opportunities and challenges of such a system. We found that the awareness provided by the camera footage could give additional confidence and comfort to Command, as well as reduce the need for explicit communications. However, it could also impact workers’ traditional roles and responsibilities, shifting the burden of responsibility toward Command. We conclude that, while wearable-camera footage could be beneficial to Command, they need to have the tools and means to narrow their focus within the abundance of information provided. Furthermore, camera streams should not be thought of as a replacement for more direct communications, but rather as another tool available to help Command supplement their understanding of events in the field and help them narrow their focus.</p>
+<p style="margin: 0.5em 0 1em 0">Contemporary 360° video players do not provide ways to let people explore the videos together. Tourgether360 addresses this problem for 360° tour videos using a pseudo-spatial navigation technique that provides both an overhead “context” view of the environment as a minimap, as well as a shared pseudo-3D environment for exploring the video. Collaborators appear as avatars along a track depending on their position in the video timeline and can point and synchronize their playback. In this work, we describe the intellectual precedents for this work, our design goals, and our implementation approach of Tourgether360. Finally, we discuss future work based on this prototype.</p>
 
 <!--
 
@@ -95,30 +97,27 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.pdf)</a><br/>
 
 
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4)</a><br/>
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.mp4)</a><br/>
 
-
-	<a href="https://dl.acm.org/doi/10.1145/3512960"><i class="fa fa-external-link"></i> DOI (https://dl.acm.org/doi/10.1145/3512960)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{jones2022rescuecastr,<br />
-&nbsp;&nbsp;author = {Jones, Brennan and Tang, Anthony and Neustaedter, Carman},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post},<br />
-&nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {2, CSCW},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{kumar2022tourgetherlbw,<br />
+&nbsp;&nbsp;author = {Kumar, Kartikaeya and Poretski, Lev and Li, Jiannan and Tang, Anthony},<br />
+&nbsp;&nbsp;booktitle = {EA CHI '22: Extended Abstracts of the 2022 SIGCHI Conference on Human Factors in Computing Systems},<br />
+&nbsp;&nbsp;title = {Tourgether360: Exploring 360° Tour Videos with Others},<br />
+&nbsp;&nbsp;type = {poster},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.pdf},<br />
 &nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;doi = {https://dl.acm.org/doi/10.1145/3512960},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4}<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.mp4},<br />
+&nbsp;&nbsp;acceptance = {36.1% (261/722)}<br />
 }<br />
 </p>
 					</div>
