--- a/papers/li2021routetapestries/index.html
+++ b/papers/li2021routetapestries/index.html
@@ -115,7 +115,7 @@
 &nbsp;&nbsp;author = {Li, Jiannan and Lyu, Jiahe and Sousa, Mauricio and Balakrishnan, Ravin and Tang, Anthony and Grossman, Tovi},<br />
 &nbsp;&nbsp;booktitle = {UIST 2021: Proceedings of the 34th Annual ACM Symposium on User Interface Software and Technology},<br />
 &nbsp;&nbsp;title = {Route Tapestries: Navigating 360 Virtual Tour Videos Using Slit-Scan Visualizations},<br />
-&nbsp;&nbsp;type = {paper},<br />
+&nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {95/367 - 25.9%},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-uist2021-li-routetapestries.pdf},<br />
