--- a/papers/mahadevan2021hri/index.html
+++ b/papers/mahadevan2021hri/index.html
@@ -117,7 +117,7 @@
 &nbsp;&nbsp;author = {Mahadevan, Karthik and Sousa, Mauricio and Tang, Anthony and Grossman, Tovi},<br />
 &nbsp;&nbsp;booktitle = {CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems},<br />
 &nbsp;&nbsp;title = {"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration},<br />
-&nbsp;&nbsp;type = {paper},<br />
+&nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {26.3% - 749/2844},<br />
 &nbsp;&nbsp;notes = {Best Paper Nominee (top 5{\%} of submissions)},<br />
