--- a/papers/poretski2022learnability/index.html
+++ b/papers/poretski2022learnability/index.html
@@ -97,11 +97,11 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
+	<a href="http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability.pdf)</a><br/>
 
 
 
-	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
+	<a href="http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability-talk.mov"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability-talk.mov)</a><br/>
 
 
 </p>
@@ -116,8 +116,8 @@
 &nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2022},<br />
 &nbsp;&nbsp;acceptance = {24.7% - 638/2579},<br />
-&nbsp;&nbsp;pdfurl = {},<br />
-&nbsp;&nbsp;videourl = {}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability-talk.mov}<br />
 }<br />
 </p>
 					</div>
