--- a/papers/pratte2021empathy/index.html
+++ b/papers/pratte2021empathy/index.html
@@ -113,7 +113,7 @@
 &nbsp;&nbsp;author = {Pratte, Sydney and Tang, Anthony and Oehlberg, Lora},<br />
 &nbsp;&nbsp;booktitle = {TEI 2021: International Conference on Tangible, Embedded and Embodied Interaction},<br />
 &nbsp;&nbsp;title = {Evoking Empathy: A Framework for Describing Empathy Tools},<br />
-&nbsp;&nbsp;type = {paper},<br />
+&nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {29.9% - 30/134},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf},<br />
