--- a/papers/pratte2022nlitenworkshop/index.html
+++ b/papers/pratte2022nlitenworkshop/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</title>
+		<title> nLITEn: A Wearables Toolkit for Enabling Creativity in Fashion Technology Design </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</h1>
+						<h1 style="margin: 0 0 0.5em 0"> nLITEn: A Wearables Toolkit for Enabling Creativity in Fashion Technology Design </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
+<span id="pratte2022nlitenworkshop">Sydney Pratte, Shannon Hoover, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> nLITEn: A Wearables Toolkit for Enabling Creativity in Fashion Technology Design </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Wilderness search and rescue (WSAR) is a command-and-control activity, where a Command team manages field teams scattered across a large area looking for a lost person. The challenge is that it can be difficult for Command to maintain awareness of field teams and the conditions of the field. We designed RescueCASTR, an interface that explores the idea of deploying field teams with wearable cameras that stream live video or sequential photos periodically to Command that aid contextual awareness. We ran a remote user study with WSAR managers to get an understanding of the opportunities and challenges of such a system. We found that the awareness provided by the camera footage could give additional confidence and comfort to Command, as well as reduce the need for explicit communications. However, it could also impact workers’ traditional roles and responsibilities, shifting the burden of responsibility toward Command. We conclude that, while wearable-camera footage could be beneficial to Command, they need to have the tools and means to narrow their focus within the abundance of information provided. Furthermore, camera streams should not be thought of as a replacement for more direct communications, but rather as another tool available to help Command supplement their understanding of events in the field and help them narrow their focus.</p>
+<p style="margin: 0.5em 0 1em 0">The nLITEn toolkit is designed to lower barriers to technology and enable creativity in fashion-tech designers during their design process. The toolkit comprises durable, quick connecting components and a small custom-designed board installed with Bekonix OS. With nLITEn, designers can explore the effects of the technology in their garments without losing time in creativity.</p>
 
 <!--
 
@@ -95,30 +95,30 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf)</a><br/>
+	<a href=" http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten.pdf)</a><br/>
 
 
+	<a href="http://techfashion.design/wearable-toolkits/"><i class="fa fa-sticky-note-o"></i> URL (http://techfashion.design/wearable-toolkits/)</a><br/>
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4)</a><br/>
 
+	<a href=" http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten-poster.pdf"><i class="fa fa-film"></i> Video ( http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten-poster.pdf)</a><br/>
 
-	<a href="https://dl.acm.org/doi/10.1145/3512960"><i class="fa fa-external-link"></i> DOI (https://dl.acm.org/doi/10.1145/3512960)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{jones2022rescuecastr,<br />
-&nbsp;&nbsp;author = {Jones, Brennan and Tang, Anthony and Neustaedter, Carman},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post},<br />
-&nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {2, CSCW},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{pratte2022nlitenworkshop,<br />
+&nbsp;&nbsp;author = {Pratte, Sydney and Hoover, Shannon and Tang, Anthony and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = { nLITEn: A Wearables Toolkit for Enabling Creativity in Fashion Technology Design },<br />
+&nbsp;&nbsp;booktitle = {CHI22 Workshop: Toolkits & Wearables - Developing Toolkits for Exploring Wearable Designs},<br />
+&nbsp;&nbsp;editor = {Genç, Çaglar and Buruk, Oguz and Jabari, Shiva and Jones, Lee and Ragozin, Kirill and Hartman, Kate and Virkki, Johanna and Juhlin, Oskar and Kunze, Kai and Häkkilä, Jonna},<br />
+&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten.pdf},<br />
+&nbsp;&nbsp;videourl = { http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten-poster.pdf},<br />
 &nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;doi = {https://dl.acm.org/doi/10.1145/3512960},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4}<br />
+&nbsp;&nbsp;type = {workshop},<br />
+&nbsp;&nbsp;url = {http://techfashion.design/wearable-toolkits/}<br />
 }<br />
 </p>
 					</div>
