--- a/papers/index.html
+++ b/papers/index.html
@@ -121,6 +121,100 @@
 						
 <h1><a name="2022"></a>2022</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/labrie2022onlineteaching"><span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, GROUP.</span>
+
+(journal).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2022-pacmgroup-labrie-video-conferencing.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+</section><a class="details" href="/papers/labrie2022onlineteaching/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/pratte2022nlitenworkshop"><span id="pratte2022nlitenworkshop">Sydney Pratte, Shannon Hoover, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> nLITEn: A Wearables Toolkit for Enabling Creativity in Fashion Technology Design </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
+
+	(Genç, Çaglar and Buruk, Oguz and Jabari, Shiva and Jones, Lee and Ragozin, Kirill and Hartman, Kate and Virkki, Johanna and Juhlin, Oskar and Kunze, Kai and Häkkilä, Jonna, Eds.)
+
+(workshop).</a><br />
+
+
+
+
+	<a href=" http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="http://techfashion.design/wearable-toolkits/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href=" http://hcitang.org/papers/2022-chi2022workshop-pratte-nliten-poster.pdf"><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/pratte2022nlitenworkshop/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/james2022flavorsworkshop"><span id="james2022flavorsworkshop">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Watch Your Flavors: Augmenting People’s Flavor Perceptions and Associated Emotions based on Videos Watched while Eating</span>. In <i>CHI22 Workshop: Future of Emotion in Human-Computer Interaction</i>.</span>
+
+	(Cox, Anna and Gross, James and Höök, Kristina and Kostakos, Vassilis and Koval, Peter and Mandryk, Regan and Slovák, Petr and Smith, Wally and Wadley, Greg and Webber, Sara, Eds.)
+
+(workshop).</a><br />
+
+
+
+
+	<a href=" http://hcitang.org/papers/2022-chi2022workshop-james-watch-your-flavors.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://cis.unimelb.edu.au/hci/emotion-workshop"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/james2022flavorsworkshop/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/kumar2022tourgetherlbw"><span id="kumar2022tourgetherlbw">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline">Tourgether360: Exploring 360° Tour Videos with Others</span>. In <i>EA CHI ’22: Extended Abstracts of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(poster).</a><br />
+
+	<small>Acceptance: 36.1% (261/722).</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-kumar-tourgether.mp4"><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/kumar2022tourgetherlbw/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/james2022flavorslbw"><span id="james2022flavorslbw">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline">Watch Your Flavors: Augmenting People’s Flavor Perceptions and Associated Emotions based on Videos Watched while Eating</span>. In <i>EA CHI ’22: Extended Abstracts of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(poster).</a><br />
+
+	<small>Acceptance: 36.1% (261/722).</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-james-flavors.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-james-flavors-poster.pdf"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href="http://hcitang.org/papers/2022-chi2022lbw-james-flavors.mp4"><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/james2022flavorslbw/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/poretski2022learnability"><span id="poretski2022learnability">Lev Poretski and Anthony Tang. (2022). <span style="text-decoration: underline">Press A to Jump: Design Strategies for Video Game Learnability</span>. In <i>CHI 2022: Proceedings of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 (conference).</a><br />
@@ -132,11 +226,11 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href=""><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2022-chi2022-poretski-video-game-learnability-talk.mov"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/poretski2022learnability/"><!-- --></a></li>
@@ -152,11 +246,13 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions-talk.mp4"><i class="fa fa-sticky-note-o"></i></a>
 
-	<a href=""><i class="fa fa-film"></i></a>
+
+	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/feick2022illusions/"><!-- --></a></li>
@@ -168,30 +264,42 @@
 
 
 
+	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+
+	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://dl.acm.org/doi/10.1145/3512960"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/jones2022rescuecastr/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/labrie2022onlineteaching"><span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, GROUP.</span>
+    <a href="/papers/james2022flavorvideos"><span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
 
-(journal).</a><br />
+(conference).</a><br />
 
-
-
-
-	<a href="http://hcitang.org/papers/2022-pacmgroup-labrie-video-conferencing.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<small>Acceptance: 40% - 19/47.</small>
 
 
 
+	<br />
 
-</section><a class="details" href="/papers/labrie2022onlineteaching/"><!-- --></a></li></ol>
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/james2022flavorvideos/"><!-- --></a></li></ol>
 
 <h1><a name="2021"></a>2021</h1>
 <ol class="bibliography"><li><section id="citation">
     <a href="/papers/pratte2021empathy"><span id="pratte2021empathy">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2021). <span style="text-decoration: underline">Evoking Empathy: A Framework for Describing Empathy Tools</span>. In <i>TEI 2021: International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
-(paper).</a><br />
+(conference).</a><br />
 
 	<small>Acceptance: 29.9% - 30/134.</small>
 
@@ -233,7 +341,7 @@
 <li><section id="citation">
     <a href="/papers/li2021routetapestries"><span id="li2021routetapestries">Jiannan Li, Jiahe Lyu, Mauricio Sousa, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2021). <span style="text-decoration: underline">Route Tapestries: Navigating 360 Virtual Tour Videos Using Slit-Scan Visualizations</span>. In <i>UIST 2021: Proceedings of the 34th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
 
-(paper).</a><br />
+(conference).</a><br />
 
 	<small>Acceptance: 95/367 - 25.9%.</small>
 
@@ -303,7 +411,7 @@
 <li><section id="citation">
     <a href="/papers/feick2021illusions"><span id="feick2021illusions">Martin Feick, Niko Kleer, André Zenner, Anthony Tang, and Antonio Krüger. (2021). <span style="text-decoration: underline">Visuo-haptic Illusions for Linear Translation and Stretching using Physical Proxies in Virtual Reality</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
-(paper).</a><br />
+(conference).</a><br />
 
 	<small>Acceptance: 26.3% - 749/2844.</small>
 
@@ -323,7 +431,7 @@
 <li><section id="citation">
     <a href="/papers/mahadevan2021hri"><span id="mahadevan2021hri">Karthik Mahadevan, Mauricio Sousa, Anthony Tang, and Tovi Grossman. (2021). <span style="text-decoration: underline">"Grip-that-there": An Investigation of Explicit and Implicit Task Allocation Techniques for Human-Robot Collaboration</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
-(paper).</a><br />
+(conference).</a><br />
 
 	<small>Acceptance: 26.3% - 749/2844.</small>
 
