--- a/papers/james2022flavorvideos/index.html
+++ b/papers/james2022flavorvideos/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</title>
+		<title> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</h1>
+						<h1 style="margin: 0 0 0.5em 0"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
+<span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
 
 
+
+	<small>Acceptance: 40% - 19/47.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Wilderness search and rescue (WSAR) is a command-and-control activity, where a Command team manages field teams scattered across a large area looking for a lost person. The challenge is that it can be difficult for Command to maintain awareness of field teams and the conditions of the field. We designed RescueCASTR, an interface that explores the idea of deploying field teams with wearable cameras that stream live video or sequential photos periodically to Command that aid contextual awareness. We ran a remote user study with WSAR managers to get an understanding of the opportunities and challenges of such a system. We found that the awareness provided by the camera footage could give additional confidence and comfort to Command, as well as reduce the need for explicit communications. However, it could also impact workers’ traditional roles and responsibilities, shifting the burden of responsibility toward Command. We conclude that, while wearable-camera footage could be beneficial to Command, they need to have the tools and means to narrow their focus within the abundance of information provided. Furthermore, camera streams should not be thought of as a replacement for more direct communications, but rather as another tool available to help Command supplement their understanding of events in the field and help them narrow their focus.</p>
+<p style="margin: 0.5em 0 1em 0">People are typically involved in different activities while eating, particularly when eating alone, such as watching television or playing games on their phones. Previous research in Human-Food Interaction (HFI) has primarily focused on studying the motivation, and analysis of the media content watched while eating. However, their impact on human behavioral and cognitive processes, particularly flavor perception and its attributes, remains underexplored. We present a user study to investigate the influence of six types of videos, including mukbang - a new food video genre, on flavor perceptions (taste sensations, liking, and emotions) while eating plain white rice. Our findings revealed that participants perceived positive emotional changes and reported significant differences in their augmented taste sensations (e.g., spicy and salty) with different food-based videos. Our findings provided insights into using our approach to promote digital commensality and healthier eating (digital augmentation without altering the food), highlighting the scope for future research.</p>
 
 <!--
 
@@ -95,30 +97,27 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf)</a><br/>
+	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
 
 
+	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://imx.acm.org/2022/)</a><br/>
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4)</a><br/>
 
-
-	<a href="https://dl.acm.org/doi/10.1145/3512960"><i class="fa fa-external-link"></i> DOI (https://dl.acm.org/doi/10.1145/3512960)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{jones2022rescuecastr,<br />
-&nbsp;&nbsp;author = {Jones, Brennan and Tang, Anthony and Neustaedter, Carman},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post},<br />
-&nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {2, CSCW},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{james2022flavorvideos,<br />
+&nbsp;&nbsp;author = {James, Meetha Nesam and Ranasinghe, Nimesha and Tang, Anthony and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = { Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos },<br />
+&nbsp;&nbsp;booktitle = {IMX 2022: ACM International Conference on Interactive Media Experiences},<br />
+&nbsp;&nbsp;pdfurl = {},<br />
 &nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;doi = {https://dl.acm.org/doi/10.1145/3512960},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4}<br />
+&nbsp;&nbsp;type = {conference},<br />
+&nbsp;&nbsp;url = {https://imx.acm.org/2022/},<br />
+&nbsp;&nbsp;acceptance = {40% - 19/47}<br />
 }<br />
 </p>
 					</div>
